Close screenshot notification after it is clicked.

When the screenshot notification was clicked, a folder which had the screenshot item got opened, but the notification was still seen.

This CL closes the screenshot notification after it is clicked and the folder got open.

BUG=808974

Change-Id: Ie285b368e14b8e2809113a48bf9f54524a842c43
Reviewed-on: https://chromium-review.googlesource.com/910476
Commit-Queue: Megumi Hattori <megumihattori@google.com>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536269}
Former-commit-id: f3ed6ebc63ac8a78efc02fca37459ba99e44fa1b